# JuegoAlessandra

./: BombManager.cpp  BombManager.h  CMakeLists.txt  Constante.cpp  Constante.h  Constants.cpp  Constants.h  ControladorBomba.cpp  ControladorBomba.h  ControladorLadrilloExplosivo.cpp  ControladorLadrilloExplosivo.h  ControladorTiempo.cpp  ControladorTiempo.h  ExplodingBrickManager.cpp  ExplodingBrickManager.h  Fire.cpp  Fire.h  FireManager.cpp  FireManager.h  GeneradorArticulos.cpp  GeneradorArticulos.h  ItemGenerator.cpp  ItemGenerator.h  Map.cpp  Map.h  Player.cpp  Player.h  PlayerKeyBinding.cpp  PlayerKeyBinding.h  Teclas.cpp  Teclas.h  TimeManager.cpp  TimeManager.h  World.cpp  World.h  cambio.txt  main.cpp
